deployzip/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-drive-app/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASDrive
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-drive-app
    sas.com/admin: namespace
  name: sas-drive-app
spec:
  host: $(INGRESS_HOST)
  path: /SASDrive
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-drive-app
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASDrive
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-drive-app
    sas.com/admin: namespace
  name: sas-drive-app-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /SASDrive
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-drive-app
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/rewrite-target: /SASDrive/
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASDrive
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-drive-app-root
    sas.com/admin: namespace
  name: sas-drive-app-root
spec:
  host: $(INGRESS_HOST)
  path: /
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-drive-app
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/rewrite-target: /SASDrive/
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASDrive
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-drive-app-root
    sas.com/admin: namespace
  name: sas-drive-app-root-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-drive-app
  wildcardPolicy: Subdomain
